--- a/VidCoder/View/QueueTitlesDialog.xaml
+++ b/VidCoder/View/QueueTitlesDialog.xaml
@@ -3,12 +3,13 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:local="clr-namespace:VidCoder"
 		xmlns:controls="clr-namespace:VidCoder.Controls"
+		xmlns:resx="clr-namespace:VidCoder.Properties"
 		Title="Queue Multiple Titles" Height="383" Width="333" MinWidth="290" MinHeight="220"
 		Style="{StaticResource NormalWindow}" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Closing="Window_Closing">
 	<Grid>
 		<TextBlock Height="23" HorizontalAlignment="Left" Margin="12,12,0,0" Name="textBlock1" Text="Pick multiple titles to add to the queue." VerticalAlignment="Top" Width="244" />
 		<ListView
-			Margin="12,41,12,76" Name="listView1"
+			Margin="12,41,12,106" Name="listView1"
 			SelectionMode="Extended"
 			ItemsSource="{Binding Titles}"
 			local:MultiSelectorBehaviors.SynchronizedSelectedItems="{Binding SelectedTitles}">
@@ -21,7 +22,7 @@
 				</DataTemplate>
 			</ListView.ItemTemplate>
 		</ListView>
-		<CheckBox Name="checkBox1" Margin="23,0,0,46" HorizontalAlignment="Left" VerticalAlignment="Bottom" IsChecked="{Binding SelectRange}">
+		<CheckBox Name="checkBox1" Margin="23,0,0,76" HorizontalAlignment="Left" VerticalAlignment="Bottom" IsChecked="{Binding SelectRange}">
 			<StackPanel Orientation="Horizontal">
 				<TextBlock Text="All titles from" Margin="0,0,4,0" VerticalAlignment="Center" />
 				<controls:NumberBox
@@ -38,22 +39,22 @@
 				<TextBlock Text="minutes" Margin="4,0,0,0" VerticalAlignment="Center" />
 			</StackPanel>
 		</CheckBox>
-		<!--<StackPanel Orientation="Horizontal" Margin="23,0,0,46" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-			<CheckBox Height="16" Name="checkBox1" VerticalAlignment="Center" IsChecked="{Binding SelectRange}" />
-			<TextBlock Text="All titles from" Margin="8,0,4,0" VerticalAlignment="Center" />
-			<controls:NumberBox
-				Width="30"
-				Number="{Binding StartRange, Mode=TwoWay}"
-				Minimum="0"
-				AllowEmpty="False" />
-			<TextBlock Text="to" Margin="4,0,4,0" VerticalAlignment="Center" />
-			<controls:NumberBox
-				Width="30"
-				Number="{Binding EndRange, Mode=TwoWay}"
-				Minimum="0"
-				AllowEmpty="False" />
-			<TextBlock Text="minutes" Margin="4,0,0,0" VerticalAlignment="Center" />
-		</StackPanel>-->
+		<CheckBox
+			Margin="23,0,0,46" HorizontalAlignment="Left" VerticalAlignment="Bottom"
+			IsChecked="{Binding TitleStartOverrideEnabled}"
+			Style="{StaticResource LongToolTipHolder}">
+			<CheckBox.ToolTip>
+				<TextBlock Text="{x:Static resx:Resources.OverrideTitleNumberToolTip}" Style="{StaticResource LongToolTip}" />
+			</CheckBox.ToolTip>
+			<StackPanel Orientation="Horizontal">
+				<TextBlock Text="Override title #: start at" Margin="0,0,4,0" VerticalAlignment="Center" />
+				<controls:NumberBox
+					Width="30"
+					Number="{Binding TitleStartOverride, Mode=TwoWay}"
+					Minimum="1"
+					AllowEmpty="False" />
+			</StackPanel>
+		</CheckBox>
 		<Button
 			Content="OK"
 			Command="{Binding AcceptCommand}"
