--- a/VidCoder/Controls/NumberBox.xaml
+++ b/VidCoder/Controls/NumberBox.xaml
@@ -1,5 +1,12 @@
 ﻿<UserControl x:Class="VidCoder.Controls.NumberBox"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<TextBox Name="numberBox" GotFocus="numberBox_GotFocus" LostFocus="numberBox_LostFocus" PreviewTextInput="numberBox_PreviewTextInput" PreviewKeyDown="numberBox_PreviewKeyDown" TextChanged="numberBox_TextChanged" />
+	<TextBox
+        Name="numberBox"
+        GotFocus="numberBox_GotFocus"
+        LostFocus="NumberBoxLostFocus"
+        PreviewTextInput="NumberBoxPreviewTextInput"
+        PreviewKeyDown="NumberBoxPreviewKeyDown"
+        PreviewMouseDown="NumberBoxPreviewMouseDown"
+        TextChanged="NumberBoxTextChanged" />
 </UserControl>
