--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -12,7 +12,7 @@
 	MinWidth="617"
 	MinHeight="445"
 	Style="{StaticResource NormalWindow}"
-	Closing="Window_Closing" AllowDrop="True" PreviewDrop="Window_Drop" PreviewDragOver="Window_PreviewDragOver" MouseDown="Window_MouseDown">
+	Closing="Window_Closing" AllowDrop="True" PreviewDrop="HandleDrop" PreviewDragOver="Window_PreviewDragOver" MouseDown="Window_MouseDown">
 	<Window.Resources>
 		<local:EnumDisplayer Type="{x:Type model:VideoEncoder}" x:Key="VideoEncoderChoices" />
 		<local:EnumDisplayer Type="{x:Type model:VideoRangeType}" x:Key="VideoRangeTypeChoices" />
