--- a/VidCoder/View/QueueColumnsDialog.xaml
+++ b/VidCoder/View/QueueColumnsDialog.xaml
@@ -15,25 +15,33 @@
 				<ColumnDefinition />
 				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
-			<TextBlock Height="23" HorizontalAlignment="Center" Margin="0,39,0,0" Name="textBlock1" Text="Unused columns" VerticalAlignment="Top" />
+
+			<TextBlock Height="23" HorizontalAlignment="Left" Margin="15,10,0,0" Name="textBlock3" Text="Drag and drop to add, remove or reorder columns." VerticalAlignment="Top" Grid.ColumnSpan="2" />
+
+
+
+			<TextBlock
+				Height="23" HorizontalAlignment="Center" Margin="0,39,0,0" VerticalAlignment="Top"
+				Name="textBlock2" Text="Used columns" />
 			<ListView
 				Margin="6,59,10,9" Name="listView1"
+				VidCoderDragDrop:DragDropHelper.IsDragSource="True"
+				VidCoderDragDrop:DragDropHelper.IsDropTarget="True"
+				VidCoderDragDrop:DragDropHelper.DragDropTemplate="{StaticResource ColumnDragTemplate}"
+				ItemsSource="{Binding UsedColumns}"
+				DisplayMemberPath="Title"/>
+
+			<TextBlock
+				Grid.Column="1" Height="23" HorizontalAlignment="Center" Margin="0,39,0,0" VerticalAlignment="Top"
+				Name="textBlock1" Text="Unused columns" />
+			<ListView
+				Grid.Column="1" Margin="10,59,12,9" Name="listView2"
 				VidCoderDragDrop:DragDropHelper.IsDragSource="True"
 				VidCoderDragDrop:DragDropHelper.IsDropTarget="True"
 				VidCoderDragDrop:DragDropHelper.DragDropTemplate="{StaticResource ColumnDragTemplate}"
 				Foreground="DarkGray"
 				ItemsSource="{Binding UnusedColumns}"
 				DisplayMemberPath="Title"/>
-
-			<TextBlock Grid.Column="1" Height="23" HorizontalAlignment="Center" Margin="0,39,0,0" Name="textBlock2" Text="Used columns" VerticalAlignment="Top" />
-			<ListView
-				Grid.Column="1" Margin="10,59,12,9" Name="listView2"
-				VidCoderDragDrop:DragDropHelper.IsDragSource="True"
-				VidCoderDragDrop:DragDropHelper.IsDropTarget="True"
-				VidCoderDragDrop:DragDropHelper.DragDropTemplate="{StaticResource ColumnDragTemplate}"
-				ItemsSource="{Binding UsedColumns}"
-				DisplayMemberPath="Title"/>
-			<TextBlock Height="23" HorizontalAlignment="Left" Margin="15,10,0,0" Name="textBlock3" Text="Drag and drop to add, remove or reorder columns." VerticalAlignment="Top" Grid.ColumnSpan="2" />
 		</Grid>
 		<Button Content="OK" Command="{Binding AcceptCommand}" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="button1" VerticalAlignment="Bottom" Width="75" IsDefault="True" />
 		<Button Content="Cancel" Command="{Binding CancelCommand}" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="button2" VerticalAlignment="Bottom" Width="75" />
